# ai-book-summarizer

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py  taskiq_broker.py  tasks.py
app/api/: deps.py  router.py
app/api/v1/: health.py  summary.py
app/core/: config.py  database.py  exception.py
app/models/: __init__.py  summary.py
app/schema/: response.py  summary.py
app/services/: ai_service.py  processor_service.py  summary_service.py
app/utils/: prompts.py
